# profinet_prasing_rs

./: .gitignore  Cargo.toml  README.md
articles/: Benchmarking.md
benches/: parsed_profinet_packet_benchmark.rs
docs/: intro.md
integration_test/: Cargo.toml
integration_test/src/: main.rs
parse_profinet/: parse_hex_dump.rs  readme.md
src/: lib.rs
test/: create_profinet_rt_pcap.py  generate_and_replay.sh  profinet_rt_packets.pcap
