[package]
name = "profinet_rt"
version = "0.1.0"
authors = ["Cyprien Avico avicocyprien@yahoo.com"] # Replace with your actual name and email
description = "A Rust crate for detecting and parsing Profinet packets from Ethernet payloads."
license = "MIT"
repository = "https://github.com/akmot9/profinet_rt" # Replace with the URL of your repository
documentation = "https://docs.rs/profinet_rt"
homepage = "https://github.com/akmot9/profinet_rt" # Replace with the URL of your project's homepage
edition = "2021"
readme = "README.md"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }

thiserror = "1.0.67"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pnet = "0.35.0"

[[bench]]
name = "parsed_profinet_packet_benchmark"
harness = false